[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "gateway-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "gateway-client"
path = "src/client.rs"

[dependencies]
bytes = "1.3.0"
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.36"
url = "2.3.1"
eyre = "0.6.8"
tokio-stream = "0.1"
bincode = "1.3.3"
hex = "0.4"
serde_json = "1.0.88"
tonic-health = "0.9.2"
fastcrypto = "0.1.4"
types = { path = "../sui/narwhal/types", package = "narwhal-types" }
[build-dependencies]
tonic-build = "0.9"
